# rustlab2024-ratatui-workshop

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
common/src/: events.rs  lib.rs  room_name.rs  server_command.rs
server/: Cargo.toml
server/src/: connection.rs  main.rs  room.rs  server.rs
tui/src/: app.rs  logger.rs  main.rs  message_list.rs  popup.rs  room_list.rs  ui.rs
