[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
color-eyre = "0.6.3"
colored_json = "5.0.0"
common = { path = "../common" }
futures = "0.3.30"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync",
] }
tokio-util = { version = "0.7.12", features = ["codec"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
